--- a/index.html
+++ b/index.html
@@ -35,14 +35,15 @@
             width: 100px;
             height: 100px;
             margin: 0 auto 20px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            border-radius: 20px;
             display: flex;
             justify-content: center;
             align-items: center;
-            font-size: 48px;
-            color: white;
-            font-weight: bold;
+        }
+
+        .logo img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
         }
 
         h1 {
@@ -116,7 +117,9 @@
 </head>
 <body>
     <div class="container">
-        <div class="logo">F</div>
+        <div class="logo">
+            <img src="img/logo-farol.png" alt="Farol Logo">
+        </div>
         <h1>Farol</h1>
         <p>Baixe nosso aplicativo e tenha acesso a uma experiência incrível!</p>
         
