Atualiza links para versões encurtadas (apple.co e bit.ly)

--- a/index.html
+++ b/index.html
@@ -129,13 +129,13 @@
         </div>
 
         <div id="buttons" class="buttons">
-            <a href="https://apps.apple.com/br/app/farol/id6756614790" class="btn btn-apple" id="iosBtn">
+            <a href="https://apple.co/49r4VEd" class="btn btn-apple" id="iosBtn">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
                     <path d="M17.05 20.28c-.98.95-2.05.8-3.08.35-1.09-.46-2.09-.48-3.24 0-1.44.62-2.2.44-3.06-.35C2.79 15.25 3.51 7.59 9.05 7.31c1.35.07 2.29.74 3.08.8 1.18-.24 2.31-.93 3.57-.84 1.51.12 2.65.72 3.4 1.8-3.12 1.87-2.38 5.98.48 7.13-.57 1.5-1.31 2.99-2.54 4.09l.01-.01zM12.03 7.25c-.15-2.23 1.66-4.07 3.74-4.25.29 2.58-2.34 4.5-3.74 4.25z"/>
                 </svg>
                 App Store
             </a>
-            <a href="https://play.google.com/store/apps/details?id=br.com.farol.cultura&hl=pt_BR" class="btn btn-android" id="androidBtn">
+            <a href="https://bit.ly/AppFarol-Android" class="btn btn-android" id="androidBtn">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
                     <path d="M3.609 1.814L13.792 12 3.609 22.186a.996.996 0 0 1-.099-.165V1.979c.026-.057.059-.112.099-.165zM14.5 12.707l2.492 2.492-9.801 5.485L14.5 12.707zm3.199-1.414l2.664 1.488c.658.368.658 1.29 0 1.658l-2.664 1.488-2.728-2.728 2.728-2.906zM7.191 3.316l9.801 5.485-2.492 2.492-7.309-7.977z"/>
                 </svg>
@@ -163,8 +163,8 @@
 
         function redirect() {
             const os = detectMobileOS();
-            const iosUrl = 'https://apps.apple.com/br/app/farol/id6756614790';
-            const androidUrl = 'https://play.google.com/store/apps/details?id=br.com.farol.cultura&hl=pt_BR';
+            const iosUrl = 'https://apple.co/49r4VEd';
+            const androidUrl = 'https://bit.ly/AppFarol-Android';
 
             if (os === 'iOS') {
                 document.getElementById('redirecting').style.display = 'block';
